--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.4.27",
+    "source-map-explorer": "^2.5.3",
     "tailwindcss": "^3.3.3",
     "typescript": "~5.1.3"
   }
